# reflect

./: .gitignore  README.md  combinatorics.ipynb  combinatorics.md  create-svg.py  daily-stats.ipynb  daily-stats.nbconvert.ipynb  game.html  game.py  get-stats.sh  index-staging.html  index.html  play.py  puzzles.txt  reflect-staging.js  reflect-stats.ipynb  reflect.js  requirements.txt  setup.cfg  solve.py  sprites.py  stats.html  trial.html  update.sh
favicon/: site.webmanifest
history/: OPTICAL1.LST  OPTICAL2.LST  OPTICAL3.LST  README.md
puzzles/: puzzle-001.txt  puzzle-002.txt  puzzle-003.txt  puzzle-004.txt  puzzle-006.txt  puzzle-007.txt  puzzle-008.txt  puzzle-009.txt  puzzle-010.txt  puzzle-011.txt  puzzle-012.txt  puzzle-013.txt  puzzle-014.txt  puzzle-015.txt  puzzle-016.txt  puzzle-017.txt  puzzle-018.txt  puzzle-019.txt  puzzle-020.txt  puzzle-2023-03-28T18:05:16.txt  puzzle-2023-03-28T18:05:39.txt  puzzle-2023-03-28T18:07:46.txt  puzzle-2023-03-31.txt  puzzle-2023-04-01.txt  puzzle-2023-04-02.txt  puzzle-2023-04-03.txt  puzzle-2023-04-04.txt  puzzle-2023-04-05.txt  puzzle-2023-04-05T14:51:21.txt  puzzle-2023-04-05T14:57:49.txt  puzzle-2023-04-05T15:02:24.txt  puzzle-2023-04-05T15:02:49.txt  puzzle-2023-04-05T15:03:35.txt  puzzle-2023-04-05T15:08:47.txt  puzzle-2023-04-05T15:10:32.txt  puzzle-2023-04-06.txt  puzzle-2023-04-07.txt  puzzle-2023-04-08.txt  puzzle-2023-04-09.txt  puzzle-2023-04-11.txt  (+1122 more)
reflect/: __init__.py  board.py  count.py  difficulty.py  game.py  generate.py  main.py  solve.py  stats.py  storage.py  svg.py  terminal.py  util.py
(+31 files in other folders)
