[metadata]
name = reflect
author = Tom White
author_email = tom.e.white@gmail.com
license = MIT
description = An optical puzzle
url = https://github.com/tomwhite/reflect
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = reflect
install_requires =
    click
    numba
    numpy
setup_requires =
    setuptools >= 41.2
    setuptools_scm

[options.entry_points]
console_scripts =
    puzzle = reflect.main:cli

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    # line too long - let black worry about that
    E501
    # line break before binary operator
    W503
